# veeshare-powerboost-sim

./: .gitattributes  .gitignore  ASSUMPTIONS.md  CHANGELOG.md  LICENSE  LIMITATIONS.md  NOTICE  README.md  pyproject.toml  requirements.txt  run.py
config/: context.yaml  priors.yaml  scenarios.yaml  seed.yaml
data/synthetic/: README.md
docs/: OUTPUTS.md  PINN_PHYSICS.md  REPRODUCIBILITY.md  RUNBOOK.md
outputs/sample/: README.md
scripts/: run_multiseed.ps1
src/: __init__.py  aggregate.py  figures.py  market.py  priors.py  report.py  sim_counterfactual.py  sim_loadbalance.py  sim_pinn.py  sim_protocol.py  summary.py  topology.py  validate.py
src/utils/: __init__.py  manifest.py  plots.py  seed.py  stats.py
tests/: conftest.py  test_aggregate.py  test_pinn_physics.py  test_priors.py  test_smoke.py  test_topology.py  test_validation.py
